metadata/sf-prod/force-app/main/default/objects/RenewalCadenceTracker__c/RenewalCadenceTracker__c.object-meta.xml
<CustomObject>
    <description>Custom object for tracking renewal email candences.</description>
    <label>Renewal Cadence Tracker</label>
    <nameField>
        <label>RCT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Cadence Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>