metadata/sf-prod/force-app/main/default/objects/RenewalCadenceTracker__c/fields/Actual_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Email_Date__c</fullName>
    <label>Actual Email Date</label>
    <type>Date</type>
</CustomField>