metadata/sf-prod/force-app/main/default/objects/RenewalCadenceTracker__c/fields/Email_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Scheduled_Date__c</fullName>
    <label>Email Scheduled Date</label>
    <type>Date</type>
</CustomField>