metadata/sf-prod/force-app/main/default/objects/RenewalCadenceTracker__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>