metadata/sf-prod/force-app/main/default/objects/RenewalCadenceTracker__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>Templateid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>